test/tests/compiler/9_functions/invalid_parse/plx1_function_after_line.plx
pub fn main(none) i32 {
    { ; } fn foo(x: i32, y: i32) i32;
}
